# News-Sentiment-GPW

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  model.py  style_css.py  ui.py  web_scrap.py
