[project]
name = "news-sentiment-gpw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cleantext>=1.1.4",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "streamlit>=1.53.0",
    "textblob>=0.19.0",
]
